# parallel_agents

./: .coveragerc  404.html  ANALYSIS_AND_ROADMAP.md  LICENSE  MVP_STATUS_REPORT.md  README.md  TEST_SUMMARY.md  TODO.md  add_numbers.py  index.html  mkdocs.yml  pyproject.toml  pytest.ini  run_tests.py  server-requirements.txt  sitemap.xml  test-requirements.txt  test_basic.py  verifier.json
.cursor/rules/: python-uv.mdc
.github/workflows/: ci.yml
api-reference/: index.html
architecture/: index.html
code-review/: index.html
development/: index.html
docs/: README.md  api-reference.md  architecture.md  code-review.md  development.md  index.md  user-guide.md
docs/review/: architecture.md  documentation.md  testing.md
docs/working_set/: README.md  api-reference.md  architecture.md  auth-api-documentation.md  auth-change-summary.md  auth-usage-examples.md  cli-documentation.md  module_0.md  module_1.md  module_2.md  usage-examples.md
search/: search_index.json
src/: agent.py  agent_factory.py  calculator.py  claude_code_agent.py  cli.py  cli_sdk.py  config.py  delta_gate.py  demo.py  doc_agent.py  goose_agent.py  mock_overseer.py  overseer.py  reporter.py  sdk.py  sdk_api.py  sdk_config.py  watcher.py  working_set.py
tests/: __init__.py  conftest.py  test_agent.py  test_calculator.py  test_cli.py  test_config.py  test_delta_gate.py  test_e2e.py  test_integration.py  test_overseer.py  test_reporter.py  test_watcher.py  test_working_set.py
tools/: check_correctness.sh  debug_pytest.py
user-guide/: index.html
working_set/: index.html
(+50 files in other folders)
