[project]
name = "verifier"
version = "0.1.0"
description = "Automated testing verifier with Claude Code agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "watchdog>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "websocket-client>=1.8.0",
    "requests>=2.32.4",
    "psutil>=7.0.0",
]

[project.scripts]
verifier = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
